[gd_scene load_steps=5 format=3 uid="uid://cxnh3mpu3kiko"]

[ext_resource type="FontFile" uid="uid://c463my81o07jm" path="res://assets/fonts/Kenney Pixel Square.ttf" id="1_ku2aw"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_t3o16"]
[ext_resource type="PackedScene" uid="uid://cbj078eirri6y" path="res://scenes/background.tscn" id="2_52gov"]

[sub_resource type="LabelSettings" id="LabelSettings_uapab"]
font = ExtResource("1_ku2aw")
font_size = 43
font_color = Color(0.701961, 0, 0.960784, 1)
outline_size = 4
shadow_size = 7
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 3)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t3o16")

[node name="Background2" parent="." instance=ExtResource("2_52gov")]

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.5
offset_top = -96.0
offset_right = 165.5
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
text = "MARTIAN MIKE"
label_settings = SubResource("LabelSettings_uapab")
horizontal_alignment = 1

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.5
offset_top = -13.0
offset_right = 97.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ku2aw")
theme_override_font_sizes/font_size = 26
text = "START"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -84.0
offset_right = 43.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 0
text = "QUIT"

[node name="MusicToggle" type="CheckButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -24.0
grow_horizontal = 0
grow_vertical = 0
button_pressed = true

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MusicToggle" to="." method="_on_music_toggle_pressed"]
